--- a/src/components/Admin/Dashboard.module.scss
+++ b/src/components/Admin/Dashboard.module.scss
@@ -9,6 +9,7 @@
         display: flex;
         flex-flow: column nowrap;
         font-size: 1.5rem;
+        background-color: white;
         a {
             padding: 1rem 2rem;
         }
