--- a/src/routes/Layout/pages/styles/About.module.scss
+++ b/src/routes/Layout/pages/styles/About.module.scss
@@ -31,7 +31,7 @@
                 background-size: cover;
                 background-position: center center;
                 background-repeat: no-repeat;
-                filter: grayscale(50%)
+                filter: grayscale(10%);
             }
             .details {
                 margin-top: 2rem;
