--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -141,7 +141,8 @@
         width: 80%;
         height: 90%;
         background: radial-gradient(circle 30vw at 100% 20%, #efefef 5%, transparent), 
-        url('../../../assets/images/home/groups.jpg') center center/ cover no-repeat;
+        // url('../../../assets/images/home/groups.jpg') center center/ cover no-repeat;
+        url('../../../assets/images/home/groups.jpg') left center/ contain no-repeat fixed;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 92%;
@@ -202,9 +203,12 @@
     .image{
         width: 80%;
         height: 90%;
+        // width: 100%;
+        // height: 100%;
         margin-left: auto;
         background: radial-gradient(circle 50vw at -20% 90%, #efefef 10%, transparent), 
-        url('../../../assets/images/home/programs.jpg') right bottom/ cover no-repeat;
+        // url('../../../assets/images/home/programs.jpg') right bottom/ cover no-repeat;
+        url('../../../assets/images/home/programs.jpg') right bottom/ contain no-repeat fixed;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 92%;
@@ -258,7 +262,8 @@
         height: 90%;
         margin-right: auto;
         background: radial-gradient(circle 30vw at 100% 100%, #efefef 10%, transparent), 
-        url('../../../assets/images/home/classes.jpg') left top/ cover no-repeat;
+        // url('../../../assets/images/home/classes.jpg') left top/ cover no-repeat;
+        url('../../../assets/images/home/classes.jpg') left top/ contain no-repeat fixed;
         filter: saturate(80%);
         @media screen and (max-width: 600px) {
             width: 100%;
@@ -315,7 +320,8 @@
         height: 90%;
         margin-right: auto;
         background: radial-gradient(circle 30vw at 100% 100%, #efefef 10%, transparent), 
-        url('../../../assets/images/home/tours.jpg') center center/ cover no-repeat;
+        // url('../../../assets/images/home/tours.jpg') center center/ cover no-repeat;
+        url('../../../assets/images/home/tours.jpg') left center/ contain no-repeat fixed;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 92%;
@@ -359,6 +365,11 @@
             transform: translateY(0);
             opacity: 1;
         }
+        .images {
+            .image{
+               opacity: 1;
+            }
+        }
     }
     .images {
         display: flex;
@@ -375,7 +386,10 @@
             box-shadow: 0px 20px 20px rgba(0,0,0,.5);
             cursor: pointer;
             filter: brightness(1.1);
-            transition: all .7s ease;
+            opacity: 0;
+            // transition: opacity 1s ease .5s, transform .7s ease;
+            // transition: transform .7s ease;
+            // transition: scale .7s ease;
             &:hover{
                 filter: brightness(1.25);
                 box-shadow: 0px 30px 30px rgba(0,0,0,.4);
@@ -388,6 +402,7 @@
             background: url('../../../assets/images/home/gallery-1.jpg') left top/ cover no-repeat;
             transform: rotate(-5deg);
             z-index: 3;
+            transition: opacity .5s ease .2s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(-5deg) scale(1.03);
@@ -399,6 +414,7 @@
             background: url('../../../assets/images/home/gallery-2.jpg') left top/ cover no-repeat;
             transform: rotate(3deg);
             z-index: 2;
+            transition: opacity .5s ease .35s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(3deg) scale(1.03);
@@ -410,6 +426,7 @@
             background: url('../../../assets/images/home/gallery-3.jpg') left top/ cover no-repeat;
             transform: rotate(12deg) translateY(20px);
             z-index: 1;
+            transition: opacity .5s ease .5s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(12deg) translateY(20px) scale(1.03);
@@ -437,6 +454,44 @@
     }
 }
 
+.ArticlesScreen {
+
+    &.active {
+        .content{
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+    &__wrapper {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        // background: url('../../../assets/images/home/articles.jpg') bottom left / cover no-repeat;
+        background: url('../../../assets/images/home/articles.jpg') bottom left / contain no-repeat fixed;
+        @media screen and (max-width: 600px) {
+          height: calc(100% - 5rem);
+          margin-top: 5rem;
+         }
+
+        .content {
+            margin-top: 5rem;
+            transition: all 1s ease .5s;
+            transform: translateY(30px);
+            opacity: 0;
+
+            @media screen and (max-width: 600px) {
+                background-color: #d2d2d2a4;
+                width: 80%;
+                margin: 2rem auto;
+                padding: 1rem;
+               }
+            .text {
+                font-size: 1.5rem;
+                margin-bottom: 2rem;
+            }
+        }
+    }
+}
 
 .AboutScreen{
     display: flex;
@@ -452,9 +507,10 @@
 
     .image{
         width: 80%;
-        height: 90%;
+        height: 80%;
         margin: 0 auto;
-        background: url('../../../assets/images/home/about.png') center top/ cover no-repeat;
+        // background: url('../../../assets/images/home/about.png') center top/ cover no-repeat;
+        background: url('../../../assets/images/home/about.png') left top/ contain no-repeat fixed;
         box-shadow: 0 15px 20px -5px;
         @media screen and (max-width: 600px) {
             margin-top: 5rem;
@@ -493,44 +549,6 @@
                 &:hover{
                     transform: scale(1.3)
                 }
-            }
-        }
-    }
-}
-
-.ArticlesScreen {
-
-    &.active {
-        .content{
-            transform: translateY(0);
-            opacity: 1;
-        }
-    }
-    &__wrapper {
-        height: 100%;
-        display: flex;
-        align-items: center;
-        background: url('../../../assets/images/home/articles.jpg') bottom left / cover no-repeat;
-        @media screen and (max-width: 600px) {
-          height: calc(100% - 5rem);
-          margin-top: 5rem;
-         }
-
-        .content {
-            margin-top: 5rem;
-            transition: all 1s ease .5s;
-            transform: translateY(30px);
-            opacity: 0;
-
-            @media screen and (max-width: 600px) {
-                background-color: #d2d2d2a4;
-                width: 80%;
-                margin: 2rem auto;
-                padding: 1rem;
-               }
-            .text {
-                font-size: 1.5rem;
-                margin-bottom: 2rem;
             }
         }
     }
