--- a/src/components/Admin/routes/styles.module.scss
+++ b/src/components/Admin/routes/styles.module.scss
@@ -44,6 +44,11 @@
     }
 }
 
+.image{
+    position: relative;
+    min-height: 250px;
+}
+
 .imagePreview {
     width: 30rem;
     height: 22rem;
