--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     padding: 7rem 4rem;
-    padding-right: 20rem;
+    // padding-right: 20rem;
     padding-bottom: 4rem;
     @media screen and (max-width: 600px) {
         padding: 0rem;
@@ -128,16 +128,44 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    &.active {
+        .wrapper {
+            opacity: 1;
+            .element{
+                opacity: 1;
+                transform: translateY(0);
+            }
+        
+        }
+    }
     .text {
         padding: 3rem;
         font-size: 1.5rem;
     }
     .wrapper {
-        // background-color: #3d6d3d;
-        // background-color: #4f8c4f;
         background-color: #0f5812b3;
         padding: 5rem 3rem;
         color: white;
+        opacity: 0;
+        transition: all 1s ease .5s;
+
+        .element{
+            transition: all .5s ease;
+            opacity: 0;
+            transform: translateY(-30px);
+            &:nth-child(1){
+                transition-delay: .5s;
+            }
+            &:nth-child(2){
+                transition-delay: .6s;
+            }
+            &:nth-child(3){
+                transition-delay: .7s;
+            }
+            &:nth-child(4){
+                transition-delay: .8s;
+            }
+        }
 
         .title{
             font-size: 2rem;
@@ -151,66 +179,41 @@
 
 .GroupsScreen{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
     &.active {
         .content{
             opacity: 1;
-            .text{
-                transform: translateX(0px);
-                opacity: 1;
-            }
-            .link{
-                transform: translateX(0px);
-                opacity: 1;
-            }
+            transform: translateX(0)
         }
     }
-
     .image{
-        width: 80%;
-        height: 90%;
+        display: block;
+        width: 100%;
+        height: 100%;
         background: radial-gradient(circle 30vw at 100% 20%, #efefef 5%, transparent), 
-        // url('../../../assets/images/home/groups.jpg') center center/ cover no-repeat;
-        url('../../../assets/images/home/groups.jpg') left center/ contain no-repeat fixed;
+        url('../../../assets/images/home/groups.jpg') left bottom/ contain no-repeat fixed;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 92%;
         }
     }
     .content {
-        position: absolute;
-        top: 7rem;
-        right: 20rem;
-        display: flex;
-        max-width: 70%;
+        margin-top: 2rem;
         padding: 2rem;
-        background-color: #d2d2d2a4;
+        display: flex;
         flex-direction: column;
         align-items: flex-end;
         opacity: 0;
-        transition: all 1.5s ease .5s;
-        @media screen and (max-width: 600px) {
-            right: 0;
-        }
+        transform: translateX(40px);
+        transition: all 1s ease .5s;
         .text{
-            width: 80%;
+            width: 100%;
             font-size: 1.5rem;
-            margin-left: auto;
-            transform: translateX(-60px);
-            opacity: 0;
-            transition: all 1s ease .5s;
             @media screen and (max-width: 600px) {
-                width: 100%;
                 font-size: 1.2rem;
             }
         }
         .link{
-            margin: 1rem 6rem 0 0;
-            transform: translateX(30px);
-            opacity: 0;
-            transition: all 1s ease .5s;
+            margin: 3rem auto;
             @media screen and (max-width: 600px) {
                 margin: 1rem auto;
             }
@@ -221,38 +224,27 @@
 
 .ProgramsScreen{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    
     &.active {
         .content{
             transform: translateX(0);
             opacity: 1;
         }
     }
-
     .image{
-        width: 80%;
-        height: 90%;
-        // width: 100%;
-        // height: 100%;
+        display: block;
+        width: 100%;
+        height: 100%;
         margin-left: auto;
         background: radial-gradient(circle 50vw at -20% 90%, #efefef 10%, transparent), 
-        // url('../../../assets/images/home/programs.jpg') right bottom/ cover no-repeat;
         url('../../../assets/images/home/programs.jpg') right bottom/ contain no-repeat fixed;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 92%;
         }
     }
-    
     .content {
-        position: absolute;
-        top: 7rem;
-        left: 7rem;
-        padding: 3rem;
-        background-color: #d2d2d2a4;
-        width: 30%;
+        padding: 2rem;
+        margin-top: 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -265,12 +257,8 @@
            width: 80%;
            font-size: 1.2rem;
         }
-        .text{
-            opacity: 1;
-        }
         .link{
             margin-top: 2rem;
-            opacity: 1;
          }
     }
 }
@@ -278,8 +266,6 @@
 
 .ClassesScreen{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     
     &.active {
         .content{
@@ -289,11 +275,11 @@
     }
 
     .image{
-        width: 80%;
-        height: 90%;
+        display: block;
+        width: 100%;
+        height: 100%;
         margin-right: auto;
         background: radial-gradient(circle 30vw at 100% 100%, #efefef 10%, transparent), 
-        // url('../../../assets/images/home/classes.jpg') left top/ cover no-repeat;
         url('../../../assets/images/home/classes.jpg') left top/ contain no-repeat fixed;
         filter: saturate(80%);
         @media screen and (max-width: 600px) {
@@ -305,12 +291,9 @@
     }
     
     .content {
-        position: absolute;
-        bottom: 7rem;
-        right: 20rem;
-        padding: 3rem;
-        background-color: #d2d2d2a4;
-        width: 30%;
+        padding: 2rem;
+        padding-left: 0;
+        padding-bottom: 6rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -319,16 +302,12 @@
         transition: all 1s ease .5s;
         font-size: 1.5rem;
         @media screen and (max-width: 600px) {
-            left: 0;
-            width: 80%;
-            font-size: 1.2rem;
-         }
-        .text{
-            opacity: 1;
+           left: 0;
+           width: 80%;
+           font-size: 1.2rem;
         }
         .link{
             margin-top: 2rem;
-            opacity: 1;
          }
     }
 }
@@ -336,8 +315,6 @@
 
 .ToursScreen{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     
     &.active {
         .content{
@@ -347,11 +324,11 @@
     }
 
     .image{
-        width: 80%;
-        height: 90%;
+        display: block;
+        width: 100%;
+        height: 100%;
         margin-right: auto;
         background: radial-gradient(circle 30vw at 100% 100%, #efefef 10%, transparent), 
-        // url('../../../assets/images/home/tours.jpg') center center/ cover no-repeat;
         url('../../../assets/images/home/tours.jpg') left center/ contain no-repeat fixed;
         @media screen and (max-width: 600px) {
             width: 100%;
@@ -362,28 +339,26 @@
     }
     
     .content {
-        position: absolute;
-        bottom: 7rem;
-        right: 20rem;
-        padding: 1rem;
-        background-color: #d2d2d2a4;
-        width: 60%;
+        // position: absolute;
+        // bottom: 7rem;
+        // right: 20rem;
+        // padding: 1rem;
+        // background-color: #d2d2d2a4;
+        // width: 60%;
         display: flex;
         flex-direction: column;
         align-items: center;
         opacity: 0;
         transform: translateY(50px);
         transition: all 1s ease .5s;
+        font-size: 1.5rem;
         @media screen and (max-width: 600px) {
             left: 0;
             width: 80%;
             font-size: 1.2rem;
          }
-        .text{
-            font-size: 1.5rem;
-        }
         .link{
-            margin: 2rem 2rem 0 auto;
+            margin: 2rem auto;
          }
     }
 }
@@ -498,7 +473,7 @@
         display: flex;
         align-items: center;
         // background: url('../../../assets/images/home/articles.jpg') bottom left / cover no-repeat;
-        background: url('../../../assets/images/home/articles.jpg') bottom left / contain no-repeat fixed;
+        background: url('../../../assets/images/home/articles.jpg') bottom center / contain no-repeat fixed;
         @media screen and (max-width: 600px) {
           height: calc(100% - 5rem);
           margin-top: 5rem;
@@ -506,6 +481,7 @@
 
         .content {
             margin-top: 5rem;
+            margin-right: 5rem;
             transition: all 1s ease .5s;
             transform: translateY(30px);
             opacity: 0;
@@ -541,7 +517,7 @@
         height: 80%;
         margin: 0 auto;
         // background: url('../../../assets/images/home/about.png') center top/ cover no-repeat;
-        background: url('../../../assets/images/home/about.png') left top/ contain no-repeat fixed;
+        background: url('../../../assets/images/home/about.png') center top/ contain no-repeat fixed;
         box-shadow: 0 15px 20px -5px;
         @media screen and (max-width: 600px) {
             margin-top: 5rem;
