--- a/src/components/Tours/MenuButton.module.scss
+++ b/src/components/Tours/MenuButton.module.scss
@@ -1,7 +1,7 @@
 .root {
     position: fixed;
-    bottom: 2.8rem;
-    right: 3rem;
+    bottom: 2rem;
+    left: 3rem;
     font-size: 2.5rem;
     color: #444;
     cursor: pointer;
