--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -7,6 +7,7 @@
 .GalleryScreen,
 .HomeScreen,
 .ArticlesScreen,
+.ReviewsScreen,
 .ContactsScreen {
     position: relative;
     width: 100%;
@@ -152,7 +153,7 @@
         .element{
             transition: all .5s ease;
             opacity: 0;
-            transform: translateY(-30px);
+            transform: translateY(-20px);
             &:nth-child(1){
                 transition-delay: .5s;
             }
@@ -173,6 +174,56 @@
         }
         .subtitle {
             font-size: 1.3rem;
+        }
+    }
+}
+
+.ReviewsScreen {
+
+    &.active {
+        .wrapper{
+            .element{
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    }
+    .wrapper {
+        height: 100%;
+
+        .element {
+            padding: 3rem;
+            opacity: 0;
+            transform: translateY(-10px);
+            transition: all .5s ease;
+            &:nth-child(1){
+                transition-delay: .5s;
+            }
+            &:nth-child(2){
+                transition-delay: .6s;
+            }
+            &:nth-child(3){
+                transition-delay: .7s;
+            }
+            &:nth-child(4){
+                transition-delay: .8s;
+            }
+
+            .photoUrl {
+                width: 10rem;
+                height: 10rem;
+                background-position: center center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                border-radius: 50%;
+            }
+            .name{ 
+                font-size: 2rem;
+                margin: 2rem auto 1rem auto;
+            }
+            .review {
+                font-size: 1.5rem;
+            }
         }
     }
 }
