--- a/src/routes/Layout/pages/styles/Programs.module.scss
+++ b/src/routes/Layout/pages/styles/Programs.module.scss
@@ -13,3 +13,50 @@
         padding: 0;
     }
 }
+.compare {
+    &__title{
+        margin: 2rem auto;
+        font-size: 2rem;
+    }
+    &__image {
+        width: 100%;
+    }
+}
+
+.program {
+    &__container{
+        height: 25rem;
+        overflow: hidden;
+        position: relative;
+    }
+    &__image {
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        margin: 0 auto;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: all 1.5s ease;
+
+        &:hover {
+            transform: scale(1.1);
+        }
+
+    }
+    &__name{
+        position: absolute;
+        color: white;
+        top: 0;
+        left: 0;
+        right: 0;
+        flex-grow: 1;
+        font-weight: bold;
+        font-size: 2.5rem;
+        padding: 1rem;
+        background-color: rgba(82, 81, 77, 0.48);
+    }
+}
