--- a/src/routes/Layout/pages/styles/Programs.module.scss
+++ b/src/routes/Layout/pages/styles/Programs.module.scss
@@ -40,10 +40,23 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
-        transition: all 1.5s ease;
-
+        transition: all 2s ease;
+        .program__info {
+            font-size: 1.3rem;
+            padding: 1rem 3rem;
+            background-color: #252322e0;
+            opacity: 0;
+            color: white;
+            transform: translateY(-20px);
+            transition: all 1s ease ;
+        }
+        
         &:hover {
             transform: scale(1.1);
+            .program__info {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
     }
